# sample_server

./: environment.yml  init_project.bat  pyproject.toml  server_fastapi_vgg16.py  vgg16_prediction_model.py
